Tue May 28 13:56:26 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* If private message key is not set, but the flag is set in
	  the packet, ignore the packet since it cannot be decrypted.
	  Affected file lib/silcclient/client_prvmsg.c.

Thu May 23 12:00:14 CEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* When resuming client, remove the old client entry from
	  the watcher list too.  Affected file silcd/packet_receive.c.

	* Do not allow normal server to force founder mode away
	  from router if the founder mode is already set.  Affected
	  file silcd/packet_receive.c.

	* Remove the client entry with watch notify types with short
	  timeout, and not directly, so that other notifys can be
	  retrieved too.  Affected file lib/silcclient/client_notify.c.

	* Display notification about data messages that cannot be
	  displayed.  Affected files irssi/src/silc/core/client_ops.c,
	  irssi/src/fe-common/silc/module-formats.[ch].

Sun May 19 18:59:00 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Fixed the CHANNEL_CHANGE notify handling in client libary
	  to not use freed memory.  Affected file is
	  lib/silcclient/client_notify.c.

	* Fixed CUMODE_CHANGE notify handling in server.  Affected
	  file silcd/packet_receive.c.

	* Fixed USERS command to support empty channels.  Affected
	  file silcd/command.c.

Sat May 18 11:35:19 EEST 2002 Pekka Riikonen <priikone@silcnet.org>

	* Allow multiple identical pending commands to be registered
	  in client library.  Affected file is lib/silcclient/command.c.

	* Call the completion for resolving client information only
	  after all resolvers has finished.  This fixes a crash in
	  the client.  Added support for checking when the resolvers
	  are finished.  Affected file is lib/silcclient/idlist.c.

	* Wait by default 3 seconds before reconnecting to the server
	  after being disconnected.  Makes the /detach command a bit
	  more usable.

Fri May 17 17:23:45 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
